--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -1,40 +1,66 @@
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a routerLink="/chemigation-permits">Chemigation Permits</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}</li>
-    </ol>
-</nav>
-<div class="container">
+<div class="container navCaretMargin">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a routerLink="/chemigation-permits">Chemigation Permits</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}</li>
+        </ol>
+    </nav>
+    <div class="row container">
+        <div class="col-12">
+            <h2 class="d-inline-block">Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}</h2>
+            <a class="btn btn-zybach btn-md mr-3 float-right disabled" routerLink="/"> Approve Annual Renewal </a>
+            <a class="btn btn-zybach btn-md mr-3 float-right disabled" routerLink="/"> Schedule Inspection </a>
+        </div>
+        <div class="row" *ngIf="chemigationPermit">
+            <div class="col-12 col-sm-6 label"><strong>Permit Status: </strong></div>
+            <div class="col-12 col-sm-6">{{chemigationPermit.ChemigationPermitStatus.ChemigationPermitStatusDisplayName}}</div>
+            <div class="col-12 col-sm-6 label"><strong>Township, Range, Section: </strong></div>
+            <div class="col-12 col-sm-6">{{chemigationPermit.TownshipRangeSection}}</div>
+            <div class="col-12 col-sm-6 label"><strong>County: </strong></div>
+            <div class="col-12 col-sm-6">TBD</div>
+        </div>
+    </div>
     <app-alert-display></app-alert-display>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-header">
-                    <a *ngIf="currentUserIsAdmin() && chemigationPermit" class="btn btn-rio btn-sm float-right"
-                    routerLink="/chemigation-permits/{{chemigationPermit.ChemigationPermitNumber}}/edit">
-                    <span class="fas fa-edit"></span> Edit
-                </a>
-                    Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}
-                </div>
-                <div class="card-body">
-                    <div class="row" *ngIf="chemigationPermit">
-                        <div class="col-12 col-sm-6 label"><strong>Permit Status: </strong></div>
-                        <div class="col-12 col-sm-6">{{chemigationPermit.ChemigationPermitStatus.ChemigationPermitStatusDisplayName}}</div>
-                        <div class="col-12 col-sm-6 label"><strong>Township, Range, Section: </strong></div>
-                        <div class="col-12 col-sm-6">{{chemigationPermit.TownshipRangeSection}}</div>
-                        <div class="col-12 col-sm-6 label"><strong>Date Received: </strong></div>
-                        <div class="col-12 col-sm-6">{{chemigationPermit.DateReceived | date:'shortDate'}}</div>
+        <div class="row mt-4">
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-header d-flex align-items-center">
+                        <div class="col-4 float-left pl-2">
+                            <div class="row align-items-center">
+                            <span class="far fa-calendar mr-2"></span>
+                            <zybach-water-year-select 
+                            [(selectedYear)]="yearToDisplay" (selectedYearChange)="updateAnnualData()"
+                            [(allYearsSelected)]="allYearsSelected" (allYearsSelectedChange)="updateAnnualData()">
+                            </zybach-water-year-select>
+                            </div>
+                        </div>
+                        <div class="col-4 text-center pl-2">Annual Record</div>                       
+                        <div class="col-4 float-right">
+                            <a *ngIf="currentUserIsAdmin() && chemigationPermit" class="btn btn-zybach btn-sm float-right"
+                            routerLink="/chemigation-permits/{{chemigationPermit.ChemigationPermitNumber}}/edit">
+                                <span class="fas fa-edit"></span> Edit Record
+                            </a>
+                        </div>
                     </div>
-                    <div class="row" *ngIf="!chemigationPermit">
-                        <div class="col text-center">
-                            <span class="fas fa-spinner loading-spinner"></span>
-                            <p>Loading...</p>
+                    <div class="card-body">
+                        <div class="row" *ngIf="currentYearAnnualRecord">
+                            <div class="col-12 col-sm-6 label"><strong>Permit Status: </strong></div>
+                            <div class="col-12 col-sm-6">{{chemigationPermit.ChemigationPermitStatus.ChemigationPermitStatusDisplayName}}</div>
+                            <div class="col-12 col-sm-6 label"><strong>Township, Range, Section: </strong></div>
+                            <div class="col-12 col-sm-6">{{chemigationPermit.TownshipRangeSection}}</div>
+                            <div class="col-12 col-sm-6 label"><strong>Date Received: </strong></div>
+                            <div class="col-12 col-sm-6">{{chemigationPermit.DateReceived | date:'shortDate'}}</div>
+                        </div>
+                        <div class="row" *ngIf="!chemigationPermit">
+                            <div class="col text-center">
+                                <span class="fas fa-spinner loading-spinner"></span>
+                                <p>Loading...</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
