ZYB-139: minor UI rework. Added SensorName to SensorMessageAgeDto.

--- a/Source/Zybach.Web/src/app/pages/sensor-status-map/sensor-status-map.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status-map/sensor-status-map.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-12 col-lg-6 py-1">
         <div class="input-group">
-            <input type="text" style="width:100%;" name="mapSearchQuery" class="form-control" placeholder="Search map by address..." [(ngModel)]="mapSearchQuery" (keyup.enter)="mapSearch()"/>
+            <input type="text" name="mapSearchQuery" class="form-control" placeholder="Search map by address..." [(ngModel)]="mapSearchQuery" (keyup.enter)="mapSearch()"/>
             <div class="input-group-append">
                 <button class="btn btn-zybach" type="button" (click)="mapSearch()" >Search</button>
             </div>
