--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-list/chemigation-permit-list.component.html
@@ -10,6 +10,8 @@
         <div class="container col-12">
             <div class="row my-2">
                 <div class="col">
+                    <fresca-clear-grid-filters-button class="mr-3" [grid]="permitGrid">
+                    </fresca-clear-grid-filters-button>
                     <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/chemigation-permits/new"><span class="fas fa-plus"></span> New Chemigation Permit </a>
                     <a class="btn btn-zybach btn-md mr-3 float-right disabled" routerLink="/chemigation-permits/create-annual-renewals"><span class="fas fa-plus"></span> Create Annual Renewals </a>
                 </div>
