change CP grid to match well grid style: view button on left for detail page, permit numbers no longer link

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -57,7 +57,7 @@
                             <input class="form-control" name="dp"
                             [(ngModel)]="model.DateReceived" ngbDatepicker #d="ngbDatepicker" required>
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary far fa-calendar" (click)="d.toggle()" type="button"></button>
+                                <button class="btn btn-zybach far fa-calendar" (click)="d.toggle()" type="button"></button>
                             </div>
                         </div>
                     </div>
