--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -104,7 +104,7 @@
                             <div class="col-sm text-right">
                                 <button type="submit" class="btn btn-zybach" [disabled]="!newChemigationPermitForm.form.valid || isLoadingSubmit">
                                     <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                                    Submit
+                                    Save
                                 </button>
                                 <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits">Cancel</a>
                             </div>
